2008-04-27  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.13.

	* romset.c: romset_archive_save() now opens the VRA file to
	write in binary mode, as the contents written already contain
	the "right" delimiters for the platform.

2008-04-20  Christian Vogelgsang  <chris@vogelgsang.org>

	* arch/unix/archdep.c, arch/unix/archdep.h: added global
	'archdep_pref_path' to relocate preferences to System Directory
	in Mac OS X Cocoa Port.

2008-04-26  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.12.

	* arch/win32/rescommon.h: Undid the last change: Now, do not
	include winres.h, as it is not available for mingw compilations.

2008-04-20  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* arch/win32/rescbm2.rc, arch/win32/resplus4.rc,
	arch/win32/resvic20.rc, arch/win32/resc128.rc,
	arch/win32/resc64.rc, arch/win32/res.rc, arch/win32/respet.rc:
	Allow for scrolling in the edit boxes of the ROM settings
	dialogs.

	* arch/win32/rescommon.h: Include winres.h instead of doubling
	all definitions.

2008-04-20  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.11.

2008-04-20  Thomas Giesel  <skoe@directbox.com>

	* init.c, monitor.h, monitor/monitor.c, translate.txt, translate.c:
	New command line switch "-moncommands <name>" to execute monitor
	commands

	* monitor/mon_lex.l, monitor/mon_parse.y, monitor/montypes.h,:
	Implemented debug command for monitor grammar; Monitor accepts labels
	created by the Acme assembler now; Minor clean up of monitor
	interpreter code.

	* monitor/mon_command.c: Re-arranged monitor help output.

2008-04-19  Greg King  <greg.king4@verizon.net>

	* src/c64/cart/ide64.c: adds a working RTC to the emulation of
	the IDE64 cartridge.

2008-04-19  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* monitor/mon_memory.c: In mon_memory_display(), define variable
	v as BYTE instead of "unsigned int" to prevent a warning for an
	implicit cast which might loose information.
